--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "directories": {
     "test": "test"
   },
-  "dependencies": {},
+  "dependencies": {
+    "eslint": "^6.7.2"
+  },
   "keywords": []
 }
